# ultralove-nmcs

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ps1  build.sh  version.h.in
.github/workflows/: build.yml
cmake/: darwin.cmake  linux.cmake  windows.cmake
docs/: nmcs-installation-instructions.org
include/nmcs/: common.h  framework.h  frameworkcommon.h  frameworkglobals.h  frameworkservice.h  frameworkservicecallback.h  frameworkservicemanager.h  globals.h  macros.h  model.h  modelasset.h  modelchaptertag.h  modelcommon.h  modelcontribution.h  modelcontributor.h  modelcontributorpresence.h  modelcontributorpresencetype.h  modelcontributorrole.h  modelenclosure.h  modelenclosuretype.h  modelepisode.h  modelepisodetype.h  modelfabric.h  modelglobals.h  modellocationtag.h  modelpicture.h  modelpicturetype.h  modelpodcast.h  modelpublisher.h  modelseason.h  modeltag.h  modeltagreference.h  modeltagreferencetype.h  modeltranscripttag.h  nativebridge.h  platform.h  platformalloc.h  platformcommon.h  platformglobals.h  platformguid.h  (+24 more)
scripts/: buildtools.ps1  buildtools.sh  buildvars.ps1  doxyfile  doxygen.sty  doxygenfooter.tex  doxygenheader.tex
src/agent/: CMakeLists.txt  agent.cpp
src/client/: CMakeLists.txt  client.cpp  clientapplication.cpp  clientapplication.h  clientchapterscommand.cpp  clientchapterscommand.h  clientcommon.h  clientguidgen.cpp  clientguidgen.h  clientguidgencommand.cpp  clientguidgencommand.h  clienthexdump.cpp  clienthexdump.h
src/compiler/: CMakeLists.txt  compiler.cpp  compilerast.cpp  compilerast.h  compilercommon.h  compilerdriver.cpp  compilerdriver.h  compileremittertype.h  compilerparser.ypp  compilerscanner.lpp
src/framework/: frameworkservicemanager.cpp
src/model/: CMakeLists.txt  model.cpp  modelcommon.h  modelfabric.cpp
src/model/v1/: CMakeLists.txt
src/model/v2/: CMakeLists.txt
src/platform/: CMakeLists.txt  platform.cpp  platformcommon.h
src/platform/darwin/: platformalloc.cpp  platformguid.cpp  platformvault.cpp
src/platform/linux/: platformalloc.cpp  platformguid.cpp  platformvault.cpp
src/platform/windows/: platformalloc.cpp  platformguid.cpp  platformvault.cpp
src/precomp/: CMakeLists.txt  precomp.cpp
src/runtime/: CMakeLists.txt  runtime.cpp  runtimecommon.h  runtimeguid.cpp  runtimeshared.cpp  runtimesharedobject.cpp  runtimestream.cpp  runtimestring.cpp  runtimeuri.cpp  runtimeversion.cpp
src/server/: CMakeLists.txt  server.cpp  serverattachedpictureframe.cpp  serverattachedpictureframe.h  serverchapterframe.cpp  serverchapterframe.h  servercommentsframe.cpp  servercommentsframe.h  servercommon.h  serverconfiguration.cpp  serverconfiguration.h  servercredentialservice.cpp  serverfileservice.cpp  serverframe.cpp  serverframe.h  serverframearray.h  serverframecontroller.cpp  serverframecontroller.h  serverframedictionary.h  serverframefactory.cpp  serverframefactory.h  serverframeresource.h  serverhttpservice.cpp  serverid3v2.cpp  serverid3v2.h  serveriframe.h  serverservicefactory.cpp  serverservicefactory.h  serverservicemanager.cpp  serverserviceresource.h  servertableofcontentsframe.cpp  servertableofcontentsframe.h  servertextinformationframe.cpp  servertextinformationframe.h  serverurllinkframe.cpp  serverurllinkframe.h
